--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-erygtrertewtwqewrwerr
+<h1>Welcome to Little Facebook!</h1>
+<h2>Please login</h2>
+
+<%= form_for(:session, url: sessions_login_path) do |f| %>
+<%=f.label :email %>
+<%=f.email_field :email %>
+
+<%=f.label :password %>
+<%=f.password_field :password %>
+
+<%=f.submit "Log in" %>
+
+<%end%>
