--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+     <% if current_user %>
+    <%= link_to 'Profile page', user_path(current_user) %> | <%= link_to "Log out", sessions_logout_path %>
+    <%else%>
+    <%= link_to 'Register', new_user_path %> | <%= "Log In", root_path %>
+    <%end%>
     <%= yield %>
   </body>
 </html>
